--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React.js using NPM, Babel6 and Webpack</title>
+    <title>Test Rocket</title>
   </head>
   <body>
     <div id="app" />
-    <script src="./dist/bundle.js" type="text/javascript"></script>
+
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script src="dist/bundle.js" type="text/javascript"></script>
   </body>
 </html>
