--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Test Rocket</title>
+    <title>Task Rocket</title>
   </head>
   <body>
-    <div id="app" />
+    <div id="root" />
 
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="dist/bundle.js" type="text/javascript"></script>
