--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <div id="root" />
 
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <script src="dist/bundle.js" type="text/javascript"></script>
+    <script src="/dist/bundle.js" type="text/javascript"></script>
   </body>
 </html>
